<resources>
    <string name="app_name">ÇiğerTakip</string>
    <string name="title_new_contact">Yeni Kayıt</string>
    <string name="title_show_contact">Kayıt Görüntüleme</string>
    <string name="title_update_contact">Kayıt Düzenleme</string>
    <string name="action_settings">Settings</string>
    <string name="action_add">Add</string>
    <string name="str_contact_image">Contact Image</string>
    <string name="str_name_surname">Adı Soyadı</string>
    <string name="str_phone_no">Telefon Numarası</string>
    <string name="str_borc">Borçları</string>
    <string name="str_delete_icon">Delete Icon</string>
    <string name="str_ad_soyad">Adı Soyadı</string>
    <string name="btn_str_back">Back</string>
    <string name="btn_str_paid">Paid</string>
    <string name="btn_str_save">Save</string>
    <string name="btn_str_delete">Delete</string>
    <string name="btn_str_update">Update</string>
    <string name="btn_str_info">Show Debit</string>
    <string name="btn_str_refresh">Refresh</string>
    <string name="str_email">E-Mail Adresinizi Giriniz.</string>
    <string name="str_show_email">Email:</string>
    <string name="str_debit_icon">Debit Food</string>
    <string name="menu_dots">menu_dots</string>
    <string name="title_debit_lists">Borç Listesi</string>
    <string name="debit_date">Borc tarihi</string>
    <string name="debit_desc">Borc Nedeni</string>
    <string name="debit_credit">Tahsilat Tarihi</string>
    <string name="debit_type_prompt">Borç Türünü Seçiniz.</string>
    <string name="debitname">Borç Türü</string>


    <string-array name="spinner_debit_type">
        <item>Ciğer</item>
        <item>Çağ Kebabı</item>
        <item>Künefe</item>
    </string-array>

</resources>
