<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/btn_str_update"
        android:id="@+id/debit_update"
        android:icon="@drawable/ico_menu_cancel"
        app:showAsAction="never"
        />

    <item
        android:title="@string/btn_str_paid"
        android:id="@+id/debit_paid"
        android:icon="@drawable/ico_menu_cancel"
        app:showAsAction="never"
        />

    <item
        android:title="@string/btn_str_delete"
        android:id="@+id/debit_delete"
        app:showAsAction="never"
        />
    <item
        android:title="@string/btn_str_info"
        android:id="@+id/debit_info"
        app:showAsAction="never"
        />
</menu>