<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >

    <ImageView
        android:id="@+id/imv_contact_icon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/contacts"
        android:layout_margin="3dp"
        android:layout_weight="1"
        android:contentDescription="@string/str_contact_image"
        />
    <LinearLayout
        android:id="@+id/lyo_contact_name"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:orientation="vertical"
        android:layout_weight="5"
        >

        <TextView
            android:text="@string/str_name_surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtName"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
            android:layout_margin="3dp"
            android:textSize="24sp"

            />

        <TextView
            android:id="@+id/txtPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/str_phone_no"
            android:layout_marginStart="3dp"
            android:textStyle="bold"
            />
    </LinearLayout>
    <ImageView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/xmark"
        android:id="@+id/imv_delete_icon"
        android:layout_margin="3dp"
        android:layout_weight="1"
        android:contentDescription="@string/str_delete_icon" />
</LinearLayout>