<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.huseyin.exemple.ciger_takip.ShowContact"
    android:weightSum="1">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="151dp"
        app:srcCompat="@drawable/contacts"
        android:id="@+id/imageView"
        tools:ignore="ContentDescription,InefficientWeight"
        />

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        tools:ignore="DisableBaselineAlignment">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            >


            <TextView
                android:text="@string/str_name_surname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"
                android:textSize="20sp" />

            <TextView
                android:text="@string/str_show_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"
                android:textSize="20sp" />

            <TextView
                android:text="@string/str_phone_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                android:textSize="20sp" />
            <TextView
                android:text="@string/str_borc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView4"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtName"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                android:textSize="20sp"
            />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtEmail"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                android:textSize="20sp"
                tools:ignore="HardcodedText"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtPhoneNumber"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                android:textSize="20sp"
                tools:ignore="HardcodedText"
            />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnciger"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                android:textSize="20sp"
                android:text="0"
                android:textAlignment="center"
                />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>